✅ Personalize to my likings 2/2 ✅ Update project to java 21 🐞 Bug while player joining 🐞 Bug while player quitting